# raytrayce_r

./: .gitignore  Cargo.toml  README.md  build.rs  imgui.ini
shaders/: pixel_shader.cso  pixel_shader.hlsl  vertex_shader.hlsl
src/: application.rs  directx.rs  gui.rs  image.rs  main.rs  window.rs  workers.rs
src/directx/: device_context.rs  mod.rs  viewport.rs
src/dxgi/: info_queue.rs  mod.rs
src/raytracing/: camera.rs  color.rs  hit_record.rs  mod.rs  pixel.rs  ray.rs  scene.rs  texture.rs  vector_3d.rs
src/raytracing/hittable/: mod.rs  sphere.rs
src/raytracing/materials/: dielectric.rs  lambertian.rs  metal.rs  mod.rs  util.rs
src/raytracing/raytracer/: cpu_raytracer.rs  gpu_raytracer.rs  mod.rs
src/raytracing/work/: generator.rs  mod.rs
src/rendering/: mod.rs
src/rendering/win32/: dxgidebug.rs  errhandlingapi.rs  libloader.rs  mod.rs  winuser.rs
