[package]
name = "raytrayce_r"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.2"
rayon = "1.5.3"
imgui = "0.8.2"
imgui-dx11-renderer = "0.8.0"
arrayref = "0.3.6"
widestring = "0.5.1"
ascii = "1.0.0"
bitflags = "1.3.2"

[dependencies.windows]
version = "0.37.0"
features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Dxgi_Common"
]